tests/positive/basic/approx_equal_exact/input.ci
void main() {
    print(toString(approxEqual(1.0, 1.0, 0.0)) + "\n");
}
