tests/negative/semantic/if_condition_float/input.ci
void main() {
    if (1.5) { print("x\n"); }
}
